Apenas números no input

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 <body>
  <div id=main>
   <h1>Churrascometro</h1>
-  <input type="text" placeholder="Adultos" id="adultos">
-  <input type="text" placeholder="Crianças" id="criancas">
-  <input type="text" placeholder="Duração" id="duracao">
+  <input type="number" placeholder="Adultos" id="adultos">
+  <input type="number" placeholder="Crianças" id="criancas">
+  <input type="number" placeholder="Duração em horas" id="duracao">
   <button id="button">Calcular</button>
   <div id="resultado">
-   <div id="totalDeCarne"></div>
-   <div id="totalDeCerveja"></div>
-   <div id="totalDeRefrigerante"></div>
+  
   </div>
  </div>
 
